Add 'controller-m3' project
This replaces Drools code with equivalent Java code, as a step
towards completely non-Drools control loop processing.

Update: use PolicyEngine thread pool instead of ForkJoinPool

Updates to address merge conflicts, but no other comments were addressed:
- bumped pom version
- handle duplicate events (i.e., same info but different request ID)

Fixed breakage due to actor property name/structure changes.

Fixed a couple of eclipse warnings about missing serialization ID.

Issue-ID: POLICY-2532
Change-Id: Ia9cf9c0dd7df84ba00f35647f2ad1fd47a98ac1b
Signed-off-by: Straubs, Ralph (rs8887) <rs8887@att.com>
Signed-off-by: Jim Hahn <jrh3@att.com>

--- a/controlloop/common/pom.xml
+++ b/controlloop/common/pom.xml
@@ -39,6 +39,7 @@
     <module>rules-test</module>
     <module>controller-frankfurt</module>
     <module>controller-usecases</module>
+    <module>controller-m3</module>
     <module>feature-controlloop-utils</module>
     <module>feature-controlloop-trans</module>
     <module>feature-controlloop-management</module>
