Fix VFC actor properties
The VFC actor doesn't have the same property structure as the
other actors, which meant that the properties listed in the file
were incorrect.  Fixed them.

Issue-ID: POLICY-2407
Change-Id: Icb8ccad518d01a5f23253a9835976eae666566f4
Signed-off-by: Jim Hahn <jrh3@att.com>

--- a/controlloop/common/feature-controlloop-management/src/main/feature/config/event-manager.properties
+++ b/controlloop/common/feature-controlloop-management/src/main/feature/config/event-manager.properties
@@ -76,6 +76,9 @@ actor.service.SO.waitSecGet=20
 actor.service.SO.operations.VF\ Module\ Create.path=serviceInstantiation/v7/serviceInstances
 actor.service.SO.operations.VF\ Module\ Delete.path=serviceInstances/v7
 
-actor.service.VFC.clientName=VFC
-actor.service.VFC.pathGet=jobs
-actor.service.VFC.operations.Restart.path=ns
+actor.service.VFC.VF\ Module\ Create.clientName=VFC
+actor.service.VFC.VF\ Module\ Create.pathGet=jobs
+actor.service.VFC.VF\ Module\ Create.maxGets=20
+actor.service.VFC.VF\ Module\ Create.waitSecGet=20
+actor.service.VFC.VF\ Module\ Create.path=ns
+actor.service.VFC.VF\ Module\ Create.timeoutSec=60
