Match property changes to CDS and VFC actors
An "operations" level is being added to the properties for the
CDS and VFC actor.  Added the new properties; the old ones can
be deleted once the change to the actors has been merged.

Issue-ID: POLICY-2629
Change-Id: Ib0bb3f62d6a2d3380aa6ec5a6e8b61ddd0a44c00
Signed-off-by: Jim Hahn <jrh3@att.com>

--- a/controlloop/common/controller-frankfurt/src/test/resources/config/event-manager.properties
+++ b/controlloop/common/controller-frankfurt/src/test/resources/config/event-manager.properties
@@ -52,6 +52,13 @@ actor.service.APPC.operations.Rebuild.placeholder=
 actor.service.APPC.operations.ModifyConfig.sinkTopic=APPC-CL
 actor.service.APPC.operations.ModifyConfig.sourceTopic=APPC-CL
 
+actor.service.CDS.operations.any.host=localhost
+actor.service.CDS.operations.any.port=7878
+actor.service.CDS.operations.any.username=grpc-username
+actor.service.CDS.operations.any.password=grpc-password
+actor.service.CDS.operations.any.timeout=10
+
+# these will be deleted once the actor change has been merged
 actor.service.CDS.any.host=localhost
 actor.service.CDS.any.port=7878
 actor.service.CDS.any.username=grpc-username
@@ -75,6 +82,14 @@ actor.service.SO.waitSecGet=20
 actor.service.SO.operations.VF\ Module\ Create.path=serviceInstantiation/v7/serviceInstances
 actor.service.SO.operations.VF\ Module\ Delete.path=serviceInstances/v7
 
+actor.service.VFC.operations.Restart.clientName=VFC
+actor.service.VFC.operations.Restart.pathGet=jobs
+actor.service.VFC.operations.Restart.maxGets=20
+actor.service.VFC.operations.Restart.waitSecGet=20
+actor.service.VFC.operations.Restart.path=ns
+actor.service.VFC.operations.Restart.timeoutSec=60
+
+# these will be deleted once the actor change has been merged
 actor.service.VFC.Restart.clientName=VFC
 actor.service.VFC.Restart.pathGet=jobs
 actor.service.VFC.Restart.maxGets=20
