--- a/controlloop/common/feature-controlloop-management/src/main/feature/config/event-manager.properties
+++ b/controlloop/common/feature-controlloop-management/src/main/feature/config/event-manager.properties
@@ -53,6 +53,13 @@ actor.service.APPC.operations.Rebuild.placeholder=
 actor.service.APPC.operations.ModifyConfig.sinkTopic=APPC-CL
 actor.service.APPC.operations.ModifyConfig.sourceTopic=APPC-CL
 
+actor.service.CDS.operations.any.host=${envd:CDS_GRPC_HOST:}
+actor.service.CDS.operations.any.port=${envd:CDS_GRPC_PORT:}
+actor.service.CDS.operations.any.username=${envd:CDS_GRPC_USERNAME:}
+actor.service.CDS.operations.any.password=${envd:CDS_GRPC_PASSWORD:}
+actor.service.CDS.operations.any.timeout=10
+
+# these will be deleted once the actor change has been merged
 actor.service.CDS.any.host=${envd:CDS_GRPC_HOST:}
 actor.service.CDS.any.port=${envd:CDS_GRPC_PORT:}
 actor.service.CDS.any.username=${envd:CDS_GRPC_USERNAME:}
@@ -76,6 +83,14 @@ actor.service.SO.waitSecGet=20
 actor.service.SO.operations.VF\ Module\ Create.path=serviceInstantiation/v7/serviceInstances
 actor.service.SO.operations.VF\ Module\ Delete.path=serviceInstances/v7
 
+actor.service.VFC.operations.Restart.clientName=VFC
+actor.service.VFC.operations.Restart.pathGet=jobs
+actor.service.VFC.operations.Restart.maxGets=20
+actor.service.VFC.operations.Restart.waitSecGet=20
+actor.service.VFC.operations.Restart.path=ns
+actor.service.VFC.operations.Restart.timeoutSec=60
+
+# these will be deleted once the actor change has been merged
 actor.service.VFC.Restart.clientName=VFC
 actor.service.VFC.Restart.pathGet=jobs
 actor.service.VFC.Restart.maxGets=20
