--- a/controlloop/common/guard/pom.xml
+++ b/controlloop/common/guard/pom.xml
@@ -4,6 +4,7 @@
   ================================================================================
   Copyright (C) 2017-2020 AT&T Intellectual Property. All rights reserved.
   Modifications Copyright (C) 2020 Bell Canada.
+  Modifications Copyright (C) 2020 Nordix Foundation.
   ================================================================================
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
@@ -39,10 +40,10 @@
     <dependency>
         <groupId>com.att.research.xacml</groupId>
         <artifactId>xacml-pdp</artifactId>
-        <version>1.0.2</version>
+        <version>2.2.0</version>
         <exclusions>
             <!--
-                Exclude jars with an older version or that are insecure and not needed. 
+                Exclude jars with an older version or that are insecure and not needed.
              -->
             <exclusion>
                 <artifactId>commons-codec</artifactId>
