--- a/controlloop/common/eventmanager/pom.xml
+++ b/controlloop/common/eventmanager/pom.xml
@@ -177,6 +177,11 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+          <groupId>org.onap.policy.models</groupId>
+          <artifactId>policy-models-decisions</artifactId>
+          <version>${policy.models.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
             <scope>provided</scope>
