--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
         <!-- Project common dependency versions -->
         <version.policy.common>1.7.0</version.policy.common>
         <policy.models.version>2.3.0</policy.models.version>
-        <version.policy.drools-pdp>1.7.0</version.policy.drools-pdp>
+        <version.policy.drools-pdp>1.7.0-SNAPSHOT</version.policy.drools-pdp>
     </properties>
 
     <build>
