--- a/controlloop/common/pom.xml
+++ b/controlloop/common/pom.xml
@@ -37,10 +37,12 @@
     <module>eventmanager</module>
     <module>rules-test</module>
     <module>controller-frankfurt</module>
+    <module>controller-tdjam</module>
     <module>feature-controlloop-utils</module>
     <module>feature-controlloop-trans</module>
     <module>feature-controlloop-management</module>
     <module>feature-controlloop-frankfurt</module>
+    <module>feature-controlloop-tdjam</module>
   </modules>
 
 
