--- a/controlloop/common/pom.xml
+++ b/controlloop/common/pom.xml
@@ -37,6 +37,7 @@
     <module>eventmanager</module>
     <module>rules-test</module>
     <module>controller-frankfurt</module>
+    <module>controller-usecases</module>
     <module>feature-controlloop-utils</module>
     <module>feature-controlloop-trans</module>
     <module>feature-controlloop-management</module>
