Move java code to rules
Created new "usecases" controller.  Refactored the eventmanager
classes to so that event-specific code is kept with the controller.

Issue-ID: POLICY-2748
Change-Id: I2c12b63cbaa0f1a2f5fd4111c49dbe900f24ab00
Signed-off-by: Jim Hahn <jrh3@att.com>

--- a/controlloop/common/controller-usecases/pom.xml
+++ b/controlloop/common/controller-usecases/pom.xml
@@ -29,9 +29,20 @@
     </parent>
 
     <artifactId>controller-usecases</artifactId>
+    <packaging>kjar</packaging>
 
     <name>${project.artifactId}</name>
     <description>Usecases Experimental Controller</description>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.kie</groupId>
+                <artifactId>kie-maven-plugin</artifactId>
+                <extensions>true</extensions>
+            </plugin>
+        </plugins>
+    </build>
 
     <dependencies>
         <dependency>
