--- a/controlloop/common/controller-usecases/pom.xml
+++ b/controlloop/common/controller-usecases/pom.xml
@@ -28,11 +28,11 @@
         <version>1.7.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>controller-frankfurt</artifactId>
+    <artifactId>controller-usecases</artifactId>
     <packaging>kjar</packaging>
 
     <name>${project.artifactId}</name>
-    <description>Frankfurt Controller</description>
+    <description>Usecases Experimental Controller</description>
 
     <build>
         <plugins>
