Add "special" Operation classes for new usecases
Created place-holder for new "usecases" controller.  Note: as of yet,
this is still just a normal java project; it will be turned into a
full-fledged kie-based controller in a later review.
Added some Operation and a few other support classes that will be
needed.
Note: the detmTarget() method and it's various supporting methods,
detmXxx(), found in GetTargetEntityOperation2 were cloned from the
pre-existing ControlLoopOperationManager2 class, and modified to fit the
strategy of the new controller.  Likewise for the junit tests of those
methods.

Issue-ID: POLICY-2748
Change-Id: Idffa135a11a56bd6afdd2728706fd40168e80912
Signed-off-by: Jim Hahn <jrh3@att.com>

--- a/controlloop/common/controller-usecases/pom.xml
+++ b/controlloop/common/controller-usecases/pom.xml
@@ -28,21 +28,10 @@
         <version>1.7.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>controller-frankfurt</artifactId>
-    <packaging>kjar</packaging>
+    <artifactId>controller-usecases</artifactId>
 
     <name>${project.artifactId}</name>
-    <description>Frankfurt Controller</description>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.kie</groupId>
-                <artifactId>kie-maven-plugin</artifactId>
-                <extensions>true</extensions>
-            </plugin>
-        </plugins>
-    </build>
+    <description>Usecases Experimental Controller</description>
 
     <dependencies>
         <dependency>
@@ -187,6 +176,12 @@
             <groupId>org.onap.policy.drools-applications.controlloop.common</groupId>
             <artifactId>rules-test</artifactId>
             <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.onap.policy.common</groupId>
+            <artifactId>utils-test</artifactId>
+            <version>${version.policy.common}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
