Move java code to rules
Created new "usecases" controller.  Refactored the eventmanager
classes to so that event-specific code is kept with the controller.

Issue-ID: POLICY-2748
Change-Id: I2c12b63cbaa0f1a2f5fd4111c49dbe900f24ab00
Signed-off-by: Jim Hahn <jrh3@att.com>

--- a/controlloop/common/controller-frankfurt/pom.xml
+++ b/controlloop/common/controller-frankfurt/pom.xml
@@ -32,7 +32,7 @@
     <packaging>kjar</packaging>
 
     <name>${project.artifactId}</name>
-    <description>Frankfurt Experimental Controller</description>
+    <description>Frankfurt Controller</description>
 
     <build>
         <plugins>
