LDAP to SAML conversion

--- a/project.config
+++ b/project.config
@@ -4,4 +4,5 @@
 	description = Code for building policies/rules for the Drools PDP engine.
 [access "refs/*"]
 	owner = group ldap/onap-gerrit-policy-drools-applications-committers
+	owner = group saml/onap-gerrit-policy-drools-applications-committers
 	read = group GitHub Replication
