Add Service instance as target type
Issue-ID: POLICY-2586
Signed-off-by: krishnaa96 <krishna.moorthy6@wipro.com>
Change-Id: Ibfc6323b7670ff965191fa4018c2be0ab903f176

--- a/controlloop/common/feature-controlloop-management/src/main/feature/config/event-manager.properties
+++ b/controlloop/common/feature-controlloop-management/src/main/feature/config/event-manager.properties
@@ -3,6 +3,7 @@
 # ONAP
 # ===============================================================================
 # Copyright (C) 2020 AT&T Intellectual Property. All rights reserved.
+# Modifications Copyright (C) 2020 Wipro Limited.
 # ===============================================================================
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -75,6 +76,7 @@ actor.service.SO.maxPolls=20
 actor.service.SO.pollWaitSec=20
 actor.service.SO.operations.VF\ Module\ Create.path=serviceInstantiation/v7/serviceInstances
 actor.service.SO.operations.VF\ Module\ Delete.path=serviceInstances/v7
+actor.service.SO.operations.Modify\ NSSI.path=3gppservices/v7/modify
 
 actor.service.VFC.clientName=VFC
 actor.service.VFC.pollPath=jobs
