Tweaks to drools-apps for new usecases controller
Made the following updates:
- modified feature-controlloop-utils to pull from the usecases
  controller instead of the frankfurt controller
- modified ONAPInstance in the xacml-pdp Decision request
- log Step2 property changes as info() instead of error()
- log Lock acquisition as info() instead of warn()

Issue-ID: POLICY-2748
Change-Id: I6b4b5877bbd6731acb761d09d0f0dec85561b163
Signed-off-by: Jim Hahn <jrh3@att.com>

--- a/controlloop/common/feature-controlloop-management/src/main/feature/config/event-manager.properties
+++ b/controlloop/common/feature-controlloop-management/src/main/feature/config/event-manager.properties
@@ -34,7 +34,7 @@ actor.service.GUARD.disabled=${envd:GUARD_DISABLED:false}
 actor.service.GUARD.clientName=GUARD
 actor.service.GUARD.onapName=Policy
 actor.service.GUARD.onapComponent=Drools PDP
-actor.service.GUARD.onapInstance=Frankfurt
+actor.service.GUARD.onapInstance=Usecases
 actor.service.GUARD.operations.Decision.path=decision
 
 actor.service.AAI.clientName=AAI
