add feature-controlloop-tdjam to drools-apps docker
the feature-controlloop-tdjam will be installed in
docker, but disable by default

Issue-ID: POLICY-2415
Change-Id: I563a16bc698ce13eb1df0d8aa1cb7b7e7b8290b3
Signed-off-by: Taka Cho <takamune.cho@att.com>

--- a/controlloop/packages/apps-controlloop/pom.xml
+++ b/controlloop/packages/apps-controlloop/pom.xml
@@ -101,6 +101,12 @@
       <version>${project.version}</version>
       <type>zip</type>
     </dependency>
+    <dependency>
+      <groupId>org.onap.policy.drools-applications.controlloop.common</groupId>
+      <artifactId>feature-controlloop-tdjam</artifactId>
+      <version>${project.version}</version>
+      <type>zip</type>
+    </dependency>
   </dependencies>
 
 </project>
