--- a/controlloop/packages/docker-controlloop/src/main/docker/Dockerfile
+++ b/controlloop/packages/docker-controlloop/src/main/docker/Dockerfile
@@ -1,3 +1,24 @@
+#-------------------------------------------------------------------------------
+# Dockerfile
+# ============LICENSE_START=======================================================
+#  Copyright (C) 2020 AT&T Intellectual Property. All rights reserved.
+# ================================================================================
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#      http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
+# SPDX-License-Identifier: Apache-2.0
+# ============LICENSE_END=========================================================
+#-------------------------------------------------------------------------------
+
 FROM onap/policy-drools:@version.policy.drools-pdp@
 
 ARG BUILD_VERSION_APP_CL=${BUILD_VERSION_APP_CL}
@@ -14,6 +35,7 @@ RUN unzip apps-controlloop.zip && \
     $POLICY_HOME/bin/features install controlloop-utils controlloop-trans controlloop-management && \
     $POLICY_HOME/bin/features install controlloop-frankfurt && \
     $POLICY_HOME/bin/features install controlloop-usecases && \
+    $POLICY_HOME/bin/features install controlloop-tdjam && \
     $POLICY_HOME/bin/features enable healthcheck distributed-locking lifecycle && \
     $POLICY_HOME/bin/features enable controlloop-trans controlloop-management && \
     $POLICY_HOME/bin/features enable controlloop-frankfurt && \
