add feature-controlloop-tdjam to drools-apps docker
the feature-controlloop-tdjam will be installed in
docker, but disable by default

Issue-ID: POLICY-2415
Change-Id: I563a16bc698ce13eb1df0d8aa1cb7b7e7b8290b3
Signed-off-by: Taka Cho <takamune.cho@att.com>

--- a/controlloop/packages/apps-controlloop/pom.xml
+++ b/controlloop/packages/apps-controlloop/pom.xml
@@ -2,7 +2,7 @@
   ============LICENSE_START=======================================================
   ONAP
   ================================================================================
-  Copyright (C) 2017-2019 AT&T Intellectual Property. All rights reserved.
+  Copyright (C) 2017-2020 AT&T Intellectual Property. All rights reserved.
   Modifications Copyright (C) 2019-2020 Bell Canada.
   ================================================================================
   Licensed under the Apache License, Version 2.0 (the "License");
@@ -98,6 +98,12 @@
     <dependency>
       <groupId>org.onap.policy.drools-applications.controlloop.common</groupId>
       <artifactId>feature-controlloop-usecases</artifactId>
+      <version>${project.version}</version>
+      <type>zip</type>
+    </dependency>
+    <dependency>
+      <groupId>org.onap.policy.drools-applications.controlloop.common</groupId>
+      <artifactId>feature-controlloop-tdjam</artifactId>
       <version>${project.version}</version>
       <type>zip</type>
     </dependency>
