Use models 2.3.4 and drools-pdp 1.7.3 releases
Issue-ID: POLICY-2863
Change-Id: Iac66e5f4794e9d959490f205b4f00ccfa4c1d332
Signed-off-by: Jim Hahn <jrh3@att.com>

--- a/pom.xml
+++ b/pom.xml
@@ -46,8 +46,8 @@
 
         <!-- Project common dependency versions -->
         <version.policy.common>1.7.1</version.policy.common>
-        <policy.models.version>2.3.3-SNAPSHOT</policy.models.version>
-        <version.policy.drools-pdp>1.7.3-SNAPSHOT</version.policy.drools-pdp>
+        <policy.models.version>2.3.4</policy.models.version>
+        <version.policy.drools-pdp>1.7.3</version.policy.drools-pdp>
     </properties>
 
     <build>
