Use release versions in drools-apps
Issue-ID: POLICY-2869
Change-Id: Ie55fb49b22b7880575395f6fa7676a508f1f2a85
Signed-off-by: Jim Hahn <jrh3@att.com>

--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
         <!-- Project common dependency versions -->
         <version.policy.common>1.7.1</version.policy.common>
         <policy.models.version>2.3.5</policy.models.version>
-        <version.policy.drools-pdp>1.7.4-SNAPSHOT</version.policy.drools-pdp>
+        <version.policy.drools-pdp>1.7.4</version.policy.drools-pdp>
     </properties>
 
     <build>
