Use new version of A&AI APIs
Just changed the version numbers; the APIs appear to be the same
otherwise.

Issue-ID: POLICY-2788
Change-Id: I842d88184a816c7fd24d935488875ba1337a1754
Signed-off-by: Jim Hahn <jrh3@att.com>

--- a/controlloop/common/feature-controlloop-management/src/main/feature/config/event-manager.properties
+++ b/controlloop/common/feature-controlloop-management/src/main/feature/config/event-manager.properties
@@ -2,7 +2,7 @@
 # ============LICENSE_START======================================================
 # ONAP
 # ===============================================================================
-# Copyright (C) 2020 AT&T Intellectual Property. All rights reserved.
+# Copyright (C) 2020-2021 AT&T Intellectual Property. All rights reserved.
 # ===============================================================================
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -38,9 +38,9 @@ actor.service.GUARD.onapInstance=Usecases
 actor.service.GUARD.operations.Decision.path=decision
 
 actor.service.AAI.clientName=AAI
-actor.service.AAI.operations.CustomQuery.path=aai/v16/query
-actor.service.AAI.operations.Pnf.path=aai/v16/network/pnfs/pnf
-actor.service.AAI.operations.Tenant.path=aai/v16/search/nodes-query
+actor.service.AAI.operations.CustomQuery.path=aai/v21/query
+actor.service.AAI.operations.Pnf.path=aai/v21/network/pnfs/pnf
+actor.service.AAI.operations.Tenant.path=aai/v21/search/nodes-query
 
 actor.service.APPC.sinkTopic=APPC-LCM-READ
 actor.service.APPC.sourceTopic=APPC-LCM-WRITE
