--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   ============LICENSE_START=======================================================
   drools-pdp-apps
   ================================================================================
-  Copyright (C) 2017-2020 AT&T Intellectual Property. All rights reserved.
+  Copyright (C) 2017-2021 AT&T Intellectual Property. All rights reserved.
   Modifications Copyright (C) 2019 Nordix Foundation.
   ================================================================================
   Licensed under the Apache License, Version 2.0 (the "License");
@@ -47,7 +47,7 @@
         <!-- Project common dependency versions -->
         <version.policy.common>1.8.0</version.policy.common>
         <policy.models.version>2.4.0</policy.models.version>
-        <version.policy.drools-pdp>1.8.0</version.policy.drools-pdp>
+        <version.policy.drools-pdp>1.8.1-SNAPSHOT</version.policy.drools-pdp>
     </properties>
 
     <build>
