--- a/pom.xml
+++ b/pom.xml
@@ -25,13 +25,13 @@
     <parent>
         <groupId>org.onap.policy.parent</groupId>
         <artifactId>integration</artifactId>
-        <version>3.3.0</version>
+        <version>3.4.0-SNAPSHOT</version>
         <relativePath />
     </parent>
 
     <groupId>org.onap.policy.drools-applications</groupId>
     <artifactId>drools-applications</artifactId>
-    <version>1.8.2-SNAPSHOT</version>
+    <version>1.9.0-SNAPSHOT</version>
 
     <name>policy-drools-applications</name>
     <packaging>pom</packaging>
@@ -45,9 +45,9 @@
         <staging.path>content/repositories/staging/</staging.path>
 
         <!-- Project common dependency versions -->
-        <version.policy.common>1.8.0</version.policy.common>
-        <policy.models.version>2.4.1</policy.models.version>
-        <version.policy.drools-pdp>1.8.1</version.policy.drools-pdp>
+        <version.policy.common>1.9.0-SNAPSHOT</version.policy.common>
+        <policy.models.version>2.5.0-SNAPSHOT</policy.models.version>
+        <version.policy.drools-pdp>1.9.0-SNAPSHOT</version.policy.drools-pdp>
     </properties>
 
     <build>
