--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
         <!-- Project common dependency versions -->
         <version.policy.common>1.8.0</version.policy.common>
         <policy.models.version>2.4.2</policy.models.version>
-        <version.policy.drools-pdp>1.8.2</version.policy.drools-pdp>
+        <version.policy.drools-pdp>1.8.3-SNAPSHOT</version.policy.drools-pdp>
     </properties>
 
     <build>
