--- a/controlloop/common/eventmanager/pom.xml
+++ b/controlloop/common/eventmanager/pom.xml
@@ -150,8 +150,8 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.onap.ccsdk.cds.components</groupId>
-            <artifactId>proto-definition</artifactId>
+            <groupId>org.onap.ccsdk.cds.blueprintsprocessor</groupId>
+            <artifactId>blueprint-proto</artifactId>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
