--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <parent>
         <groupId>org.onap.policy.parent</groupId>
         <artifactId>integration</artifactId>
-        <version>3.3.0</version>
+        <version>3.3.1-SNAPSHOT</version>
         <relativePath />
     </parent>
 
@@ -46,7 +46,7 @@
 
         <!-- Project common dependency versions -->
         <version.policy.common>1.8.0</version.policy.common>
-        <policy.models.version>2.4.2</policy.models.version>
+        <policy.models.version>2.4.3-SNAPSHOT</policy.models.version>
         <version.policy.drools-pdp>1.8.3-SNAPSHOT</version.policy.drools-pdp>
     </properties>
 
