--- a/controlloop/common/feature-controlloop-management/src/main/feature/config/DCAE_TOPIC-topic.properties
+++ b/controlloop/common/feature-controlloop-management/src/main/feature/config/DCAE_TOPIC-topic.properties
@@ -1,14 +1,14 @@
 # ============LICENSE_START=======================================================
 # ONAP
 # ================================================================================
-# Copyright (C) 2020 AT&T Intellectual Property. All rights reserved.
+# Copyright (C) 2020-2021 AT&T Intellectual Property. All rights reserved.
 # ================================================================================
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
-# 
+#
 #      http://www.apache.org/licenses/LICENSE-2.0
-# 
+#
 # Unless required by applicable law or agreed to in writing, software
 # distributed under the License is distributed on an "AS IS" BASIS,
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -18,7 +18,7 @@
 
 dmaap.source.topics=DCAE_TOPIC
 
-dmaap.source.topics.DCAE_TOPIC.effectiveTopic=${env:DCAE_TOPIC}
-dmaap.source.topics.DCAE_TOPIC.servers=${env:DMAAP_SERVERS}
-dmaap.source.topics.DCAE_TOPIC.consumerGroup=${env:DCAE_CONSUMER_GROUP}
-dmaap.source.topics.DCAE_TOPIC.https=true
+dmaap.source.topics.DCAE_TOPIC.effectiveTopic=${envd:DCAE_TOPIC}
+dmaap.source.topics.DCAE_TOPIC.servers=${envd:DMAAP_SERVERS}
+dmaap.source.topics.DCAE_TOPIC.consumerGroup=${envd:DCAE_CONSUMER_GROUP}
+dmaap.source.topics.DCAE_TOPIC.https=${envd:DMAAP_HTTPS:true}
