Use global dmaap https flag as default configuration
Issue-ID: POLICY-3366
Signed-off-by: jhh <jorge.hernandez-herrero@att.com>
Change-Id: I7f19ce0dc96a1cb6e98da019360aa7fa0f0ca4b6

--- a/controlloop/common/feature-controlloop-management/src/main/feature/config/APPC-LCM-READ-topic.properties
+++ b/controlloop/common/feature-controlloop-management/src/main/feature/config/APPC-LCM-READ-topic.properties
@@ -1,7 +1,7 @@
 # ============LICENSE_START=======================================================
 # ONAP
 # ================================================================================
-# Copyright (C) 2020 AT&T Intellectual Property. All rights reserved.
+# Copyright (C) 2020-2021 AT&T Intellectual Property. All rights reserved.
 # ================================================================================
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -19,4 +19,4 @@
 dmaap.sink.topics=APPC-LCM-READ
 
 dmaap.sink.topics.APPC-LCM-READ.servers=${env:DMAAP_SERVERS}
-dmaap.sink.topics.APPC-LCM-READ.https=true
+dmaap.sink.topics.APPC-LCM-READ.https=${envd:DMAAP_HTTPS:true}
