--- a/controlloop/common/feature-controlloop-management/src/main/feature/config/APPC-CL-topic.properties
+++ b/controlloop/common/feature-controlloop-management/src/main/feature/config/APPC-CL-topic.properties
@@ -1,7 +1,7 @@
 # ============LICENSE_START=======================================================
 # ONAP
 # ================================================================================
-# Copyright (C) 2020 AT&T Intellectual Property. All rights reserved.
+# Copyright (C) 2020-2021 AT&T Intellectual Property. All rights reserved.
 # ================================================================================
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -19,8 +19,8 @@
 dmaap.source.topics=APPC-CL
 dmaap.sink.topics=APPC-CL
 
-dmaap.source.topics.APPC-CL.servers=${env:DMAAP_SERVERS}
-dmaap.source.topics.APPC-CL.https=true
+dmaap.source.topics.APPC-CL.servers=${envd:DMAAP_SERVERS}
+dmaap.source.topics.APPC-CL.https=${envd:DMAAP_HTTPS:true}
 
-dmaap.sink.topics.APPC-CL.servers=${env:DMAAP_SERVERS}
-dmaap.sink.topics.APPC-CL.https=true
+dmaap.sink.topics.APPC-CL.servers=${envd:DMAAP_SERVERS}
+dmaap.sink.topics.APPC-CL.https=${envd:DMAAP_HTTPS:true}
